CPFED-3847: - added some back to menu styles - fixed all red hat toggle and custom links focus color on mobile

--- a/elements/pfe-navigation/src/pfe-navigation--lightdom.scss
+++ b/elements/pfe-navigation/src/pfe-navigation--lightdom.scss
@@ -112,6 +112,15 @@ pfe-navigation {
     a,
     button {
       @include top-level-button;
+      &:focus,
+      &:hover {
+        @include focus-styles(#000, 1px);
+        box-shadow: none;
+    
+        @include breakpoint('secondary-links-expand') {
+          @include alt-focus-styles(#fff, #e00);
+        }
+      }
     }
   }
 
